<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TWMJ助手</string>
    <string name="action_reference">番數表</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

    <!-- tabs -->
    <string name="title_calculator">計拉莊</string>
    <string name="title_thisgame">今回</string>
    <string name="title_history">成績</string>
    <string name="title_reference">番數表</string>

    <!-- laai jong calculator -->
    <string name="oppo_label">對家</string>
    <string name="newScore_label"> 輸入 </string>
    <string name="button_addScore">加入</string>
    <string name="button_finish">計</string>
    <string name="button_cut">唔拉喇,一半</string>
    <string name="result_label">結果: </string>

    <!-- new trans -->
    <string name="thisgame_label">This game</string>

    <!-- history -->
    <string name="history_label">History</string>

</resources>